# egraphs-with-dmp

./: .gitignore  README.md
egraph_vis/: CMakeLists.txt  mainpage.dox  manifest.xml
egraph_vis/include/egraph_vis/: egraph_marker_maker.h  egraph_visualizer.h
egraph_vis/src/: egraph_visualizer.cpp
egraphs/: CMakeLists.txt  mainpage.dox  manifest.xml
egraphs/include/egraphs/: egraph.h  egraphManager.h  egraph_2d_grid_heuristic.h  egraph_3d_grid_heuristic.h  egraph_discretize.h  egraph_euclidean_heuristic.h  egraph_heuristic.h  egraph_planner.h  egraph_stat_writer.h  egraphable.h  planner_state.h  test_egraphable.h
egraphs/src/: egraph.cpp  egraphManager.cpp  egraph_2d_grid_heuristic.cpp  egraph_3d_grid_heuristic.cpp  egraph_euclidean_heuristic.cpp  egraph_planner.cpp  test_egraphs.cpp
move_pr2/: CMakeLists.txt  manifest.xml
move_pr2/include/move_pr2/: move_pr2_server.h
move_pr2/src/: move_pr2_server.cpp
move_pr2/srv/: MovePR2.srv
navigation_xy/: CMakeLists.txt  mainpage.dox  manifest.xml
navigation_xy/config/: costmap_common_params.yaml  global_costmap_params.yaml  params.in
navigation_xy/include/navigation_xy/: constants.h  interact_xy.h  navigation_xy.h  navigation_xy_node.h
navigation_xy/launch/: interact.launch  node.launch
navigation_xy/src/: interact_xy.cpp  navigation_xy.cpp  navigation_xy_node.cpp  run_tests.cpp
navigation_xy/srv/: GetXYPlan.srv
potential_field_dmp/: CMakeLists.txt  mainpage.dox  manifest.xml
potential_field_dmp/include/: dmp.h  dmp_server.h
potential_field_dmp/msg/: Parameters.msg  Plan.msg  Trajectory_1D.msg  WayPoint.msg
potential_field_dmp/src/: dmp.cpp  dmp_server.cpp
potential_field_dmp/srv/: GenerateDMPPlan.srv  GenerateLinearDMPPlan.srv  SetParamDMP.srv  TrainLinearDMP.srv
